feat(service): enhance StockServiceImpl with CRUD operations and resource validation for stock management